# ml-cicd-workflow

./: .gitignore  LICENSE  README.md  deploy_details.json  pyproject.toml
.github/workflows/: deploy-trained-model.yml  run-hp-tuning.yml  tests.yml  update-deploy-details.yml
doc/: delivery.md  screenshots.md  useful_commands.md
docker/: Dockerfile.app  Dockerfile.train-model  app_entry_point.sh
examples/: kubeflow_hyperparameter_tuning.py  kubeflow_model_registry.py  random_hyperparameter_search.yml  train_xgboost.py  write_to_gcs.py
manifests/: create_pv.yaml  create_pvc.yaml  train-model.yaml  vertex-hp-config.yaml
scripts/: build_container.sh  create_vertex_hp_tuning_jobs.sh  monitor_katib.sh  update_deploy_details.py  update_deploy_model.py
src/app/: main.py  schemas.py
src/training/: create_vertex_job.py  train_model.py
test/unit/: train_model_test.py
